[gd_scene load_steps=4 format=3 uid="uid://dyr3yh2h4a5sf"]

[ext_resource type="Script" uid="uid://l5kb8kb67m4m" path="res://Scripts/Maps/race_2.gd" id="1_euynr"]
[ext_resource type="Texture2D" uid="uid://bi0swqibxx61x" path="res://Draws/Race2.png" id="1_l4doh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euynr"]
size = Vector2(256, 1)

[node name="Node2D" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_euynr")

[node name="Race2" type="Sprite2D" parent="."]
position = Vector2(1177, 1231)
texture = ExtResource("1_l4doh")

[node name="exterior" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(384, 508, 384, 2238, 393, 2299, 403, 2327, 421, 2351, 439, 2358, 457, 2362, 474, 2363, 493, 2365, 519, 2368, 547, 2372, 570, 2376, 599, 2376, 614, 2379, 627, 2380, 640, 2382, 659, 2382, 985, 2381, 1238, 2379, 1407, 2374, 1558, 2377, 1733, 2377, 1862, 2383, 1986, 2384, 2058, 2378, 2127, 2366, 2179, 2353, 2201, 2346, 2221, 2333, 2239, 2317, 2251, 2295, 2256, 2280, 2263, 2261, 2266, 2250, 2269, 2232, 2274, 2217, 2276, 2208, 2281, 2190, 2288, 2176, 2293, 2159, 2297, 2139, 2300, 2120, 2303, 2097, 2305, 2070, 2309, 2045, 2308, 1876, 2301, 1831, 2297, 1781, 2272, 1744, 2248, 1730, 2183, 1693, 2086, 1661, 2013, 1647, 1915, 1645, 1891, 1657, 1879, 1658, 1859, 1655, 1845, 1653, 1810, 1652, 1762, 1653, 1738, 1655, 1627, 1651, 1563, 1644, 1470, 1637, 1372, 1625, 1287, 1617, 1242, 1604, 1209, 1594, 1185, 1583, 1166, 1573, 1146, 1561, 1124, 1540, 1096, 1514, 1086, 1501, 1092, 1494, 1100, 1493, 1227, 1494, 1342, 1495, 1376, 1496, 1405, 1497, 1476, 1498, 1525, 1495, 1574, 1491, 1585, 1486, 1616, 1479, 1645, 1476, 1658, 1473, 1676, 1469, 1698, 1459, 1712, 1448, 1735, 1427, 1747, 1403, 1754, 1381, 1765, 1351, 1764, 1311, 1754, 1266, 1738, 1216, 1693, 1112, 1671, 1050, 1649, 994, 1618, 943, 1585, 913, 1498, 867, 1475, 859, 1369, 810, 1282, 782, 1199, 761, 1142, 750, 1128, 730, 1128, 706, 1137, 674, 1160, 660, 1190, 663, 1213, 667, 1208, 656, 1182, 621, 1165, 572, 1154, 526, 1149, 496, 1155, 488, 1162, 490, 1166, 504, 1174, 562, 1192, 609, 1217, 647, 1240, 671, 1256, 680, 1283, 683, 1357, 689, 1454, 695, 1539, 693, 1581, 692, 1620, 679, 1633, 670, 1653, 655, 1674, 631, 1685, 614, 1694, 560, 1692, 494, 1689, 457, 1679, 411, 1670, 375, 1663, 332, 1642, 283, 1614, 250, 1570, 213, 1547, 203, 1525, 201, 1512, 201, 1473, 191, 1448, 190, 1429, 194, 1387, 195, 1337, 191, 1247, 192, 1164, 196, 1122, 202, 1087, 200, 1063, 191, 1054, 179, 1052, 146, 1049, 129, 1032, 96, 1012, 59, 921, 22, 748, 18, 716, 27, 689, 64, 669, 116, 662, 147, 662, 202, 659, 228, 661, 247, 667, 266, 671, 284, 671, 301, 671, 326, 666, 341, 663, 352, 661, 367, 662, 392, 674, 396, 697, 402, 762, 430, 781, 438, 810, 443, 833, 447, 848, 456, 851, 470, 845, 485, 835, 500, 818, 509, 806, 513, 785, 512, 761, 511, 741, 504, 726, 496, 705, 478, 685, 454, 648, 412, 568, 411, 540, 402, 495, 407, 459, 430, 432, 443, 410, 471, 390, 495, 287, 437, 482, 174, 617, 25, 794, 5, 1129, 28, 1430, 93, 1727, 132, 1779, 481, 1751, 692, 1554, 756, 1265, 738, 1442, 784, 1726, 876, 1884, 1215, 1881, 1484, 1701, 1521, 1508, 1561, 1726, 1592, 2126, 1546, 2305, 1643, 2327, 1747, 2337, 2109, 2288, 2387, 1952, 2423, 803, 2432, 384, 2410, 304, 2194, 330, 1869, 327, 1303, 302, 890, 294, 638, 306, 496, 373, 486, 390, 495)

[node name="interior" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(578, 547, 582, 534, 602, 533, 620, 541, 657, 577, 678, 600, 716, 631, 739, 649, 753, 658, 771, 668, 787, 678, 803, 686, 814, 691, 825, 692, 837, 695, 897, 694, 906, 692, 919, 690, 935, 687, 940, 680, 949, 675, 955, 669, 959, 666, 962, 661, 962, 650, 963, 633, 968, 621, 978, 579, 983, 561, 989, 540, 989, 488, 987, 465, 1000, 431, 997, 418, 963, 370, 929, 348, 896, 332, 866, 313, 842, 299, 818, 270, 813, 256, 813, 221, 830, 197, 849, 197, 870, 200, 887, 211, 910, 233, 925, 256, 940, 274, 954, 289, 965, 303, 973, 309, 998, 322, 1019, 330, 1042, 339, 1063, 345, 1081, 349, 1093, 345, 1108, 345, 1117, 343, 1127, 343, 1144, 345, 1166, 345, 1186, 345, 1201, 346, 1224, 350, 1248, 360, 1261, 368, 1283, 367, 1315, 370, 1334, 374, 1355, 373, 1367, 375, 1394, 375, 1426, 375, 1458, 380, 1473, 391, 1485, 405, 1489, 420, 1490, 462, 1484, 479, 1469, 496, 1460, 501, 1429, 503, 1399, 503, 1389, 498, 1373, 491, 1354, 482, 1339, 473, 1321, 459, 1312, 447, 1292, 429, 1280, 419, 1265, 406, 1250, 388, 1230, 370, 1219, 365, 1195, 364, 1157, 362, 1141, 359, 1127, 358, 1115, 360, 1107, 367, 1085, 367, 1075, 373, 1063, 381, 1052, 387, 1044, 395, 1037, 403, 1026, 415, 1018, 426, 1014, 436, 1008, 446, 1006, 456, 1001, 470, 1005, 491, 1004, 545, 997, 573, 991, 589, 988, 604, 984, 621, 979, 642, 979, 659, 975, 687, 979, 711, 985, 749, 993, 778, 999, 802, 1009, 818, 1025, 852, 1044, 884, 1071, 923, 1096, 958, 1123, 979, 1151, 1004, 1180, 1025, 1191, 1032, 1209, 1034, 1231, 1037, 1250, 1042, 1254, 1043, 1260, 1045, 1283, 1053, 1316, 1066, 1332, 1077, 1353, 1091, 1374, 1112, 1406, 1150, 1423, 1175, 1445, 1205, 1452, 1220, 1453, 1256, 1451, 1272, 1441, 1288, 1432, 1293, 1415, 1294, 1388, 1295, 1367, 1297, 1330, 1297, 1318, 1301, 1161, 1301, 1142, 1298, 1131, 1293, 1114, 1289, 1078, 1289, 1058, 1294, 1030, 1300, 1010, 1304, 991, 1315, 969, 1329, 956, 1337, 933, 1359, 917, 1390, 904, 1399, 897, 1414, 888, 1432, 882, 1452, 874, 1496, 873, 1519, 877, 1537, 892, 1579, 910, 1615, 939, 1652, 979, 1691, 1021, 1721, 1044, 1738, 1082, 1760, 1112, 1775, 1173, 1797, 1229, 1812, 1291, 1820, 1332, 1826, 1381, 1829, 1454, 1838, 1511, 1839, 1548, 1841, 1605, 1852, 1623, 1853, 1687, 1854, 1714, 1857, 1733, 1860, 1751, 1861, 1758, 1862, 1778, 1865, 1810, 1864, 1827, 1867, 1869, 1867, 1889, 1869, 1909, 1878, 1939, 1895, 1958, 1916, 1973, 1943, 1974, 2019, 1972, 2033, 1967, 2047, 1958, 2068, 1951, 2082, 1933, 2098, 1910, 2112, 1870, 2145, 1833, 2150, 1793, 2155, 1757, 2156, 1733, 2160, 1709, 2165, 1690, 2167, 1679, 2170, 1360, 2169, 1329, 2176, 1306, 2180, 1260, 2188, 1225, 2194, 1202, 2195, 1177, 2199, 1142, 2198, 1128, 2202, 1108, 2201, 1102, 2204, 1008, 2206, 979, 2202, 948, 2199, 918, 2191, 862, 2180, 812, 2164, 786, 2146, 763, 2126, 734, 2091, 701, 2043, 672, 1984, 652, 1911, 648, 1854, 643, 1827, 643, 1712, 646, 1698, 645, 1035, 645, 700, 640, 682, 632, 664, 626, 648, 616, 634, 606, 615, 604, 599, 592, 574)

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(515, 1436.5)
shape = SubResource("RectangleShape2D_euynr")

[node name="LapTime" type="Timer" parent="."]
wait_time = 4096.0

[node name="IarbaArea" type="Area2D" parent="."]
visible = false

[node name="Grass" type="CollisionPolygon2D" parent="IarbaArea"]
polygon = PackedVector2Array(384, 2218, 397, 2307, 419, 2345, 432, 2354, 645, 2379, 937, 2381, 996, 2374, 1115, 2376, 1293, 2372, 1417, 2372, 1727, 2374, 1888, 2380, 2014, 2379, 2112, 2364, 2176, 2350, 2208, 2336, 2229, 2317, 2245, 2291, 2259, 2254, 2266, 2218, 2285, 2164, 2298, 2094, 2304, 2040, 2304, 1879, 2295, 1835, 2289, 1778, 2252, 1737, 2164, 1690, 2089, 1669, 2040, 1655, 1979, 1651, 1927, 1651, 1894, 1660, 1884, 1664, 1854, 1658, 1777, 1657, 1665, 1657, 1545, 1648, 1445, 1637, 1389, 1627, 1330, 1626, 1283, 1619, 1234, 1606, 1179, 1584, 1121, 1546, 1085, 1507, 1084, 1491, 1237, 1492, 1345, 1492, 1413, 1496, 1467, 1496, 1561, 1489, 1604, 1479, 1643, 1475, 1670, 1469, 1698, 1456, 1728, 1430, 1746, 1396, 1758, 1360, 1759, 1318, 1759, 1299, 1736, 1219, 1687, 1107, 1656, 1021, 1615, 949, 1601, 932, 1561, 905, 1479, 865, 1404, 829, 1316, 796, 1251, 777, 1222, 770, 1191, 763, 1163, 760, 1134, 750, 1121, 731, 1128, 678, 1148, 662, 1172, 656, 1167, 588, 1150, 527, 1145, 488, 1166, 485, 1173, 515, 1177, 545, 1195, 601, 1210, 631, 1238, 663, 1256, 674, 1307, 681, 1428, 690, 1506, 692, 1582, 686, 1624, 674, 1666, 635, 1682, 610, 1689, 532, 1683, 453, 1669, 382, 1647, 300, 1609, 248, 1556, 208, 1511, 205, 1469, 193, 1428, 197, 1357, 196, 1311, 194, 1273, 194, 1215, 197, 1150, 200, 1125, 204, 1087, 204, 1055, 190, 1048, 147, 1042, 123, 1013, 71, 1002, 58, 944, 36, 912, 26, 882, 23, 811, 18, 781, 21, 724, 27, 711, 34, 676, 101, 672, 125, 668, 147, 664, 155, 664, 207, 663, 248, 673, 280, 673, 327, 664, 357, 664, 389, 708, 404, 764, 427, 782, 436, 848, 449, 855, 466, 843, 501, 814, 517, 771, 517, 724, 500, 645, 414, 564, 414, 543, 406, 510, 408, 491, 414, 476, 424, 460, 434, 443, 440, 432, 452, 424, 463, 416, 470, 404, 481, 390, 496, 386, 508, 387, 2216, 470, 2217, 471, 1623, 470, 529, 481, 476, 518, 446, 559, 431, 618, 431, 643, 438, 673, 479, 689, 507, 710, 528, 761, 556, 818, 556, 842, 546, 863, 529, 879, 502, 893, 462, 894, 435, 884, 415, 865, 407, 825, 408, 800, 405, 780, 403, 759, 391, 726, 367, 710, 339, 705, 325, 705, 297, 708, 274, 708, 230, 703, 210, 705, 172, 720, 102, 739, 65, 762, 55, 866, 54, 903, 69, 943, 108, 972, 146, 995, 184, 1005, 204, 1037, 228, 1051, 237, 1069, 241, 1090, 243, 1203, 241, 1361, 238, 1484, 239, 1517, 246, 1533, 258, 1552, 272, 1573, 292, 1595, 310, 1619, 333, 1641, 371, 1649, 445, 1646, 518, 1619, 582, 1584, 610, 1512, 635, 1385, 646, 1323, 642, 1257, 620, 1212, 585, 1176, 471, 1159, 463, 1128, 467, 1111, 490, 1107, 531, 1106, 574, 1109, 650, 1106, 703, 1119, 748, 1139, 782, 1154, 798, 1186, 811, 1218, 814, 1253, 819, 1281, 826, 1334, 839, 1390, 863, 1501, 903, 1552, 926, 1572, 941, 1599, 983, 1628, 1026, 1648, 1074, 1672, 1145, 1680, 1207, 1678, 1313, 1668, 1356, 1647, 1405, 1609, 1430, 1559, 1455, 1489, 1483, 1350, 1481, 1183, 1480, 1087, 1480, 1071, 1489, 1063, 1502, 1059, 1527, 1065, 1542, 1082, 1551, 1096, 1561, 1105, 1571, 1126, 1587, 1157, 1602, 1171, 1611, 1182, 1619, 1233, 1635, 1272, 1647, 1301, 1652, 1324, 1656, 1343, 1657, 1392, 1657, 1423, 1658, 1458, 1661, 1544, 1670, 1602, 1678, 1649, 1680, 1715, 1686, 1765, 1687, 1831, 1692, 1918, 1694, 2014, 1697, 2046, 1708, 2067, 1717, 2092, 1723, 2109, 1732, 2135, 1751, 2172, 1799, 2195, 1833, 2215, 1867, 2224, 1898, 2226, 1972, 2222, 2014, 2211, 2074, 2201, 2124, 2180, 2182, 2164, 2229, 2129, 2267, 2072, 2292, 1994, 2297, 1887, 2304, 1770, 2308, 1731, 2309, 1693, 2312, 1380, 2313, 1203, 2310, 1068, 2310, 964, 2315, 884, 2313, 782, 2311, 694, 2308, 627, 2298, 552, 2293, 510, 2271, 485, 2252, 473, 2218)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="IarbaArea"]
polygon = PackedVector2Array(564, 1939, 563, 533, 571, 516, 578, 506, 593, 506, 608, 516, 626, 531, 646, 551, 662, 569, 684, 589, 711, 610, 752, 629, 789, 640, 809, 643, 852, 642, 875, 634, 910, 606, 935, 567, 949, 531, 961, 482, 963, 438, 957, 390, 938, 369, 916, 358, 898, 348, 875, 341, 836, 340, 811, 326, 789, 300, 787, 251, 788, 214, 798, 187, 812, 174, 850, 171, 878, 181, 897, 199, 942, 248, 973, 273, 1003, 291, 1038, 305, 1060, 311, 1081, 314, 1131, 315, 1180, 319, 1243, 327, 1286, 327, 1342, 326, 1432, 326, 1504, 327, 1518, 336, 1526, 347, 1533, 364, 1541, 388, 1544, 403, 1543, 502, 1538, 525, 1529, 540, 1515, 552, 1499, 563, 1470, 572, 1431, 577, 1363, 576, 1328, 574, 1310, 570, 1291, 556, 1278, 542, 1271, 518, 1262, 497, 1251, 465, 1235, 432, 1214, 399, 1193, 381, 1162, 372, 1131, 373, 1103, 389, 1068, 430, 1046, 478, 1036, 518, 1030, 552, 1025, 578, 1021, 612, 1019, 627, 1019, 730, 1023, 759, 1034, 798, 1046, 824, 1069, 848, 1097, 865, 1132, 878, 1199, 897, 1253, 919, 1289, 937, 1305, 945, 1320, 956, 1342, 972, 1374, 989, 1411, 1004, 1441, 1017, 1456, 1028, 1481, 1051, 1494, 1067, 1508, 1089, 1522, 1107, 1530, 1120, 1544, 1146, 1551, 1169, 1556, 1189, 1559, 1207, 1559, 1263, 1554, 1285, 1544, 1318, 1538, 1335, 1531, 1343, 1512, 1354, 1497, 1358, 1473, 1367, 1418, 1376, 1397, 1377, 1289, 1377, 1226, 1380, 1155, 1382, 1076, 1385, 1041, 1390, 1009, 1395, 989, 1401, 965, 1419, 952, 1438, 944, 1467, 945, 1500, 946, 1511, 959, 1539, 961, 1559, 969, 1589, 974, 1598, 994, 1616, 1019, 1635, 1041, 1656, 1069, 1680, 1100, 1703, 1123, 1716, 1156, 1730, 1188, 1739, 1207, 1741, 1235, 1751, 1276, 1765, 1294, 1769, 1319, 1770, 1362, 1771, 1415, 1774, 1461, 1776, 1513, 1780, 1658, 1780, 1708, 1782, 1790, 1781, 1807, 1780, 1914, 1780, 1937, 1779, 1960, 1779, 1976, 1787, 1989, 1795, 2001, 1802, 2008, 1806, 2013, 1811, 2019, 1818, 2030, 1830, 2041, 1844, 2048, 1858, 2053, 1871, 2059, 1884, 2063, 1898, 2065, 1913, 2067, 1922, 2068, 1956, 2069, 1995, 2067, 2012, 2061, 2036, 2057, 2053, 2046, 2079, 2035, 2096, 2015, 2127, 1995, 2146, 1967, 2164, 1943, 2178, 1922, 2190, 1906, 2196, 1892, 2200, 1870, 2209, 1844, 2216, 1820, 2218, 1764, 2223, 1707, 2226, 1551, 2227, 1539, 2230, 1370, 2229, 1263, 2229, 1230, 2232, 1165, 2239, 1116, 2244, 1094, 2246, 1066, 2245, 962, 2245, 896, 2238, 820, 2239, 766, 2235, 735, 2228, 702, 2207, 668, 2181, 629, 2131, 601, 2078, 580, 2007, 570, 1966, 565, 1941, 658, 1940, 664, 1968, 673, 1991, 681, 2010, 691, 2029, 700, 2047, 727, 2082, 742, 2106, 764, 2131, 784, 2150, 805, 2163, 828, 2173, 862, 2184, 891, 2191, 940, 2200, 988, 2206, 1030, 2208, 1112, 2207, 1159, 2202, 1208, 2197, 1237, 2196, 1265, 2193, 1318, 2182, 1368, 2170, 1682, 2171, 1735, 2163, 1784, 2158, 1837, 2153, 1867, 2148, 1900, 2124, 1949, 2091, 1972, 2048, 1978, 2015, 1976, 1940, 1951, 1900, 1903, 1870, 1874, 1864, 1821, 1863, 1763, 1860, 1699, 1852, 1664, 1851, 1619, 1850, 1550, 1839, 1511, 1836, 1447, 1832, 1355, 1826, 1280, 1816, 1218, 1806, 1166, 1789, 1122, 1775, 1060, 1744, 1016, 1713, 985, 1692, 955, 1663, 922, 1623, 904, 1596, 881, 1546, 874, 1512, 879, 1481, 886, 1450, 902, 1410, 921, 1391, 936, 1363, 968, 1333, 1028, 1302, 1081, 1292, 1117, 1293, 1155, 1303, 1327, 1303, 1426, 1297, 1450, 1284, 1456, 1246, 1453, 1211, 1430, 1175, 1385, 1119, 1333, 1072, 1262, 1043, 1208, 1030, 1186, 1026, 1143, 992, 1085, 940, 1049, 886, 1030, 852, 1000, 795, 984, 729, 979, 674, 983, 634, 997, 590, 1007, 538, 1005, 480, 1013, 445, 1029, 413, 1048, 396, 1070, 381, 1095, 367, 1112, 368, 1119, 363, 1132, 361, 1148, 364, 1170, 365, 1201, 368, 1229, 373, 1258, 403, 1291, 433, 1318, 459, 1361, 487, 1393, 503, 1431, 506, 1461, 504, 1483, 490, 1494, 457, 1491, 413, 1475, 385, 1430, 369, 1348, 369, 1261, 364, 1226, 347, 1178, 340, 1095, 342, 1083, 347, 1059, 342, 1023, 329, 978, 308, 962, 295, 931, 259, 903, 220, 876, 199, 840, 194, 821, 200, 815, 215, 810, 233, 813, 261, 827, 284, 842, 300, 865, 315, 888, 328, 920, 346, 945, 360, 962, 374, 977, 395, 996, 420, 996, 429, 993, 444, 986, 463, 985, 484, 988, 511, 983, 551, 976, 583, 966, 617, 959, 656, 954, 669, 930, 686, 899, 691, 879, 694, 830, 692, 810, 687, 776, 671, 752, 654, 733, 643, 708, 624, 679, 599, 663, 582, 636, 554, 615, 536, 603, 532, 582, 532, 577, 540, 576, 550, 580, 557, 591, 579, 600, 594, 604, 615, 613, 634, 623, 648, 634, 674, 643, 699, 644, 855, 643, 1465, 641, 1728, 644, 1846, 647, 1874, 647, 1901, 656, 1937, 570, 1939)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="IarbaArea" to="." method="onGrass"]
[connection signal="body_exited" from="IarbaArea" to="." method="NotOnGrass"]
[connection signal="ready" from="IarbaArea" to="." method="_on_iarba_area_ready"]
